Disassembly queue drop fixes